--- a/src/artists.html
+++ b/src/artists.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>drip.ge - coming soon</title>
 		<meta name="author" content="Codrops" />
+		<meta name='viewport' 
+     	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, 
+     	user-scalable=0' >
 		<link rel="shortcut icon" href="./img/icons/dripfav.png">
 		<link rel="stylesheet" href="https://use.typekit.net/gyf5muf.css">
 		<link rel="stylesheet" type="text/css" href="css/artists.css" />
