marquee need fix

--- a/src/artists.html
+++ b/src/artists.html
@@ -14,6 +14,9 @@
 	</head>
 	<body class="loading">
 		<main>
+			<marquee class="marquee">
+				comming soon
+			</marquee>
 			<div class="content">
 				<h2 class="content__title">
 					<img src="./img/icons/drip-bg.png">
@@ -34,6 +37,9 @@
 				</div>
 			</div>
 		</main>
+		<marquee class="marquee bottom">
+			comming soon
+		</marquee>
 		<div class="cursor">
 			<svg class="cursor__svg" width="5" height="5">
 				<circle class="cursor__svg-circle"/>
