--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 				</textPath>
 			</text>
 			<text class="circles__text circles__text--3">
-				<textPath xlink:href="#circle-3" aria-label="" textLength="1350">coming &nbsp soon &nbsp &nbsp</textPath>
+				<textPath xlink:href="#circle-3" aria-label="" textLength="1350">coming soon coming soon &nbsp</textPath>
 			</text>
 		</svg>
 		<div class="frame">
