--- a/src/artists.html
+++ b/src/artists.html
@@ -4,10 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>drip.ge - coming soon</title>
-		<meta name="author" content="Codrops" />
 		<meta name='viewport' 
      	content='width=device-width, initial-scale=1.0, maximum-scale=1.0, 
      	user-scalable=0' >
+		<meta property="og:description" content="ქართველი არტისტების კოლაბორაციული პლატფორმა და ონლაინ მარკეტფლეისი"/>
+		<meta property="og:image" content="./img/OG.png"/>
 		<link rel="shortcut icon" href="./img/icons/dripfav.png">
 		<link rel="stylesheet" href="https://use.typekit.net/gyf5muf.css">
 		<link rel="stylesheet" type="text/css" href="css/artists.css" />
@@ -15,7 +16,9 @@
 	<body class="loading">
 		<main>
 			<marquee class="marquee">
-				comming soon
+				comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
+				comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
+				comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
 			</marquee>
 			<div class="content">
 				<h2 class="content__title">
@@ -38,7 +41,9 @@
 			</div>
 		</main>
 		<marquee class="marquee bottom">
-			comming soon
+			comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
+			comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
+			comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
 		</marquee>
 		<div class="cursor">
 			<svg class="cursor__svg" width="5" height="5">
