--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>drip.ge - coming soon</title>
-	<meta name="description" content="An experimental circular SVG text animation" />
-	<meta name="keywords" content="animation, svg, text, typography, intro, javascript" />
-	<meta name="author" content="Codrops" />
+	<meta property="og:description" content="ქართველი არტისტების კოლაბორაციული პლატფორმა და ონლაინ მარკეტფლეისი"/>
+	<meta property="og:image" content="./img/OG.png"/>
 	<link rel="shortcut icon" href="./img/icons/dripfav.png">
 	<link rel="stylesheet" href="https://use.typekit.net/kxo3pgz.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
