--- a/src/artists.html
+++ b/src/artists.html
@@ -15,15 +15,63 @@
 	</head>
 	<body class="loading">
 		<main>
-			<marquee class="marquee">
-				comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
-				comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
-				comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
-			</marquee>
+
 			<div class="content">
+				<div class="marquee">
+					<div class="marquee__inner" aria-hidden="true">
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					</div>
+				</div>
 				<h2 class="content__title">
 					<img src="./img/icons/drip-bg.png">
 				</h2>
+				<div class="marquee">
+					<div class="marquee__inner" aria-hidden="true">
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					</div>
+				</div>
 				<div class="grid">
 					<a class="grid__item pos-1" data-title="ANWLI"><div class="grid__item-img" style="background-image:url(img/thumbs/anwli.png);"></div></a>
 					<a class="grid__item pos-2" data-title="JACOB<br/>SHEDEVRS"><div class="grid__item-img" style="background-image:url(img/thumbs/jacobshedevrs.png);"></div></a>
@@ -40,11 +88,6 @@
 				</div>
 			</div>
 		</main>
-		<marquee class="marquee bottom">
-			comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
-			comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
-			comming soon comming soon comming soon comming soon comming soon comming soon comming soon comming soon
-		</marquee>
 		<div class="cursor">
 			<svg class="cursor__svg" width="5" height="5">
 				<circle class="cursor__svg-circle"/>
