--- a/src/artists.html
+++ b/src/artists.html
@@ -46,7 +46,7 @@
 				<h2 class="content__title">
 					<img src="./img/icons/drip-bg.png">
 				</h2>
-				<div class="marquee">
+				<div class="marquee bottom">
 					<div class="marquee__inner" aria-hidden="true">
 						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
 						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
