--- a/src/artists.html
+++ b/src/artists.html
@@ -15,69 +15,44 @@
 	</head>
 	<body class="loading">
 		<main>
-
-			<div class="content">
-				<div class="marquee">
-					<div class="marquee__inner" aria-hidden="true">
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					</div>
+			<div class="marquee top">
+				<div class="marquee__inner" aria-hidden="true">
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
 				</div>
+			</div>
+			<div class="content">
 				<h2 class="content__title">
 					<img src="./img/icons/drip-bg.png">
 				</h2>
-				<div class="marquee bottom">
-					<div class="marquee__inner" aria-hidden="true">
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-						<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					</div>
-				</div>
 				<div class="grid">
 					<a class="grid__item pos-1" data-title="ANWLI"><div class="grid__item-img" style="background-image:url(img/thumbs/anwli.png);"></div></a>
 					<a class="grid__item pos-2" data-title="JACOB<br/>SHEDEVRS"><div class="grid__item-img" style="background-image:url(img/thumbs/jacobshedevrs.png);"></div></a>
 					<a class="grid__item pos-3" data-title="GURIKA<br/>CHOKHELI"><div class="grid__item-img" style="background-image:url(img/thumbs/gurikachokheli.png);"></div></a>
 					<a class="grid__item pos-4" data-title="PAQIZI"><div class="grid__item-img" style="background-image:url(img/thumbs/faqizi.png);"></div></a>
-					<a class="grid__item pos-5" data-title="ANRIJO"><div class="grid__item-img" style="background-image:url(img/thumbs/anrijo.png);"></div></a>
+					<a class="grid__item pos-5" data-title="ANRI JO"><div class="grid__item-img" style="background-image:url(img/thumbs/anrijo.png);"></div></a>
 					<a class="grid__item pos-6" data-title="OTTO"><div class="grid__item-img" style="background-image:url(img/thumbs/otomikadze.png);"></div></a>
 					<a class="grid__item pos-7" data-title="MARIMAMA"><div class="grid__item-img" style="background-image:url(img/thumbs/marimama.png);"></div></a>
 					<a class="grid__item pos-8" data-title="MURTAZI"><div class="grid__item-img" style="background-image:url(img/thumbs/murtazi.png);"></div></a>
@@ -87,7 +62,36 @@
 					<a class="grid__item pos-12" data-title="TEOTOI"><div class="grid__item-img" style="background-image:url(img/thumbs/teotoi.png);"></div></a>
 				</div>
 			</div>
+			<div class="marquee bottom">
+				<div class="marquee__inner" aria-hidden="true">
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+				</div>
+			</div>
 		</main>
+
 		<div class="cursor">
 			<svg class="cursor__svg" width="5" height="5">
 				<circle class="cursor__svg-circle"/>
