--- a/src/artists.html
+++ b/src/artists.html
@@ -12,6 +12,15 @@
 		<link rel="shortcut icon" href="./img/icons/dripfav.png">
 		<link rel="stylesheet" href="https://use.typekit.net/gyf5muf.css">
 		<link rel="stylesheet" type="text/css" href="css/artists.css" />
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-82YVR3R89W"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-82YVR3R89W');
+		</script>
 	</head>
 	<body class="loading">
 		<main>
