--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,15 @@
 	<link rel="stylesheet" href="https://use.typekit.net/kxo3pgz.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-82YVR3R89W"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-82YVR3R89W');
+	</script>
 </head>
 
 <body class="intro loading">
@@ -35,8 +44,10 @@
 			</nav>
 		</div>
 		<button class="enter">
-			<a href="artists.html" id="site-enter-link"><div class="enter__bg"></a>
+			<a href="artists.html" id="site-enter-link"><div class="enter__bg"> </div></a>
+			<!-- <span class="button-text">ENTER</span> -->
 		</button>
+
 	</main>
 	<script src="js/index.js"></script>
 </body>
