--- a/src/artists.html
+++ b/src/artists.html
@@ -13,13 +13,13 @@
 		<link rel="stylesheet" href="https://use.typekit.net/gyf5muf.css">
 		<link rel="stylesheet" type="text/css" href="css/artists.css" />
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-82YVR3R89W"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-96YZP7PQBG"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
 
-			gtag('config', 'G-82YVR3R89W');
+			gtag('config', 'G-96YZP7PQBG');
 		</script>
 	</head>
 	<body class="loading">
