--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-82YVR3R89W"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-96YZP7PQBG"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 
-		gtag('config', 'G-82YVR3R89W');
+		gtag('config', 'G-96YZP7PQBG');
 	</script>
 </head>
 
