--- a/src/artists.html
+++ b/src/artists.html
@@ -26,30 +26,30 @@
 		<main>
 			<div class="marquee top">
 				<div class="marquee__inner" aria-hidden="true">
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
 				</div>
 			</div>
 			<div class="content">
@@ -73,30 +73,30 @@
 			</div>
 			<div class="marquee bottom">
 				<div class="marquee__inner" aria-hidden="true">
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
-					<span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span><span>comming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
+					<span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span><span>coming soon&nbsp</span>
 				</div>
 			</div>
 		</main>
